# cmd/api/core/openapi/v1_transactions_transaction_id_patch_req.oa.go
@@ -1,0 +1,12 @@
+// Code generated by openapi-generator; DO NOT EDIT.
+// API version: 0.0.1
+
+package openapi
+
+type V1TransactionsTransactionIdPatchReq struct {
+	Date       *string `json:"date" validate:"omitempty,datetime=2006-01-02"`
+	Type       *int    `json:"type" validate:"omitempty,oneof=1 2"` // Transaction type:   * 1 - income   * 2 - expense
+	CategoryId *int    `json:"categoryId" validate:"omitempty,min=1,max=999999999"`
+	Amount     *int    `json:"amount" validate:"omitempty,min=1,max=999999999"`
+	Note       *string `json:"note" validate:"omitempty,max=1000"`
+}
