# cmd/api/core/openapi/v1_transactions_transaction_id_put_req.oa.go
@@ -1,12 +1,0 @@
-// Code generated by openapi-generator; DO NOT EDIT.
-// API version: 0.0.1
-
-package openapi
-
-type V1TransactionsTransactionIdPutReq struct {
-	Date       string `json:"date" validate:"required,datetime=2006-01-02"`
-	Type       int    `json:"type" validate:"required,oneof=1 2"` // Transaction type:   * 1 - income   * 2 - expense
-	CategoryId int    `json:"categoryId" validate:"min=1,max=999999999"`
-	Amount     int    `json:"amount" validate:"min=1,max=999999999"`
-	Note       string `json:"note" validate:"max=1000"`
-}
